--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HFahlstedt/ng-pug-inline-template-loader.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HFahlstedt/ng-pug-inline-template-loader/issues"
+  },
+  "homepage": "https://github.com/HFahlstedt/ng-pug-inline-template-loader",
   "keywords": [
     "pug",
     "angularjs",
