--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ng-pug-inline-template-loader",
-  "version": "0.0.1",
+  "version": "0.9.0",
   "description": "Webpack loader that transform angular inline templates from pug into html ",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,12 @@
   "dependencies": {
     "loader-utils": "^1.1.0",
     "pug": "^2.0.0-rc.4"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.4.1",
+    "babel-preset-env": "^1.6.1",
+    "jest": "^22.4.2",
+    "memory-fs": "^0.4.1",
+    "webpack": "^4.1.0"
   }
 }
